--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/cb46b494f4.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet" /> 
     <title>React App</title>
   </head>
   <body>
